# ha-rf

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: codeql-analysis.yml  hassfest.yaml  release-drafter.yml  test.yml
custom_components/ha_rf/: __init__.py  manifest.json  rf_device.py  rf_receiver.py  switch.py
tests/: __init__.py  test_gpio_detection.py  test_protocols.py  test_rf_device.py  test_switch.py
